reload on click

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1 class="title">
       <br />
-      <span id="prefix">prefijo</span> <span id="item">item</span>
+      <span id="prefix">prefijo</span> <span class="item--em" id="item">item</span>
       <span id="suffix">sufijo</span>
     </h1>
     <br />
@@ -18,6 +18,7 @@
       Por favor <a href="https://cafecito.app/squareoctopus">comprame un cafecito</a> PORFA PORFA NECESITO JUEGOS
       Y SEMILLAS DE AMNESIA HAZE Y NO QUIERO LABURAR
     </p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
