responsive fix, maybe

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <body>
     <h1 class="title">
       <br />
-      <span id="prefix">prefijo</span> <span class="item--em" id="item">item</span>
-      <span id="suffix">sufijo</span>
+      <span id="prefix" class="hidifier">prefijo</span>
+      <span class="item--em hidifier" id="item">item</span>
+      <span id="suffix" class="hidifier">sufijo</span>
     </h1>
     <br />
     <p class="begging">
-      Por favor <a href="https://cafecito.app/squareoctopus">comprame un cafecito</a> PORFA PORFA NECESITO JUEGOS
-      Y SEMILLAS DE AMNESIA HAZE Y NO QUIERO LABURAR
+      Por favor
+      <a href="https://cafecito.app/squareoctopus">comprame un cafecito</a>
+      PORFA DALE NECESITO VIDEOJUEGOS Y NO QUIERO LABURAR
     </p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./script.js"></script>
